@@ -1,5 +1,7 @@
 $Id$
 Version 1.1.2 (?? ??? 2006)
+ - Applied PATCH [ 1221369 ] upgrade docs <-> Postgresql
+   but, to install/sql/upgrade-postgres.sql instead of UPGRADING.html
  - Fix bug [ 1612985 ] new installation get an error using the installation-wizard
  - Fix bug [ 1612973 ] error during using 'update_translation.pl'
  - Implemented PATCH [ 1611288 ] Japanese translation updated
